Fix dark mode toggle

--- a/src/styles.css
+++ b/src/styles.css
@@ -30,5 +30,6 @@
 body,
 html {
 	@apply font-NotoSans;
+	@apply bg-white text-black;
 	@apply dark:bg-darkBG dark:text-white;
 }
